# rick-api

./: .gitignore  docker-compose.yml  pyproject.toml
config/: config.py
data/: create_tables.sql  data_script.py
database/: database.py
rick_api/: main.py
rick_api/data/: data_script.py
rick_api/infra/: database.py
rick_api/routes/: characters.py  episodes.py
