[tool.poetry]
name = "rick-api"
version = "0.1.0"
description = ""
authors = ["davidbarbi3r <davidbarbi3r@gmail.com>"]
readme = "README.md"
packages = [{include = "rick_api"}]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.5"
pylint = "^2.15.5"
python-dotenv = "^0.21.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
